@@ -1,7 +1,7 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
  *  Copyright (C) 1995, 1996  Robert Gentleman and Ross Ihaka
- *  Copyright (C) 1997--2015  The R Core Team
+ *  Copyright (C) 1997--2016  The R Core Team
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Pulic License as published by
@@ -665,7 +665,7 @@ static int fgrep_one(const char *pat, const char *target,
 	    }
 	return -1;
     }
-    if (!useBytes && use_UTF8) {	
+    if (!useBytes && use_UTF8) {
         int ib, used;
 	for (ib = 0, i = 0; ib <= len-plen; i++) {
 	    if (strncmp(pat, target+ib, plen) == 0) {
@@ -982,9 +982,12 @@ SEXP attribute_hidden do_grep(SEXP call, SEXP op, SEXP args, SEXP env)
 static R_size_t fgrepraw1(SEXP pat, SEXP text, R_size_t offset) {
     Rbyte *haystack = RAW(text), *needle = RAW(pat);
     R_size_t n = LENGTH(text);
-    switch (LENGTH(pat)) { /* it may be silly but we optimize small needle
-			      searches, because they can be used to match
-			      single UTF8 chars (up to 3 bytes) */
+    R_size_t ncmp = LENGTH(pat);
+    if (n < ncmp)
+	return (R_size_t) -1;
+    switch (ncmp) { /* it may be silly but we optimize small needle
+		       searches, because they can be used to match
+		       single UTF8 chars (up to 3 bytes) */
     case 1:
 	{
 	    Rbyte c = needle[0];
@@ -999,7 +1002,8 @@ static R_size_t fgrepraw1(SEXP pat, SEXP text, R_size_t offset) {
 	{
 	    n--;
 	    while (offset < n) {
-		if (haystack[offset] == needle[0] && haystack[offset + 1] == needle[1])
+		if (haystack[offset    ] == needle[0] &&
+		    haystack[offset + 1] == needle[1])
 		    return offset;
 		offset++;
 	    }
@@ -1019,9 +1023,8 @@ static R_size_t fgrepraw1(SEXP pat, SEXP text, R_size_t offset) {
 	}
     default:
 	{
-	    R_size_t ncmp = LENGTH(pat);
-	    n -= ncmp;
 	    ncmp--;
+	    n -= ncmp;
 	    while (offset < n) {
 		if (haystack[offset] == needle[0] &&
 		    !memcmp(haystack + offset + 1, needle + 1, ncmp))
@@ -1030,7 +1033,7 @@ static R_size_t fgrepraw1(SEXP pat, SEXP text, R_size_t offset) {
 	    }
 	}
     }
-    return -1;
+    return (R_size_t) -1;
 }
 
 /* grepRaw(pattern, text, offset, ignore.case, fixed, value, all, invert) */
@@ -2787,7 +2790,7 @@ SEXP attribute_hidden do_regexec(SEXP call, SEXP op, SEXP args, SEXP env)
 }
 
 /* pcre_config was added in PCRE 4.0, with PCRE_CONFIG_UTF8 .
-   PCRE_CONFIG_UNICODE_PROPERTIES had been added by 8.10, 
+   PCRE_CONFIG_UNICODE_PROPERTIES had been added by 8.10,
    the earliest version we allow.
  */
 SEXP attribute_hidden do_pcre_config(SEXP call, SEXP op, SEXP args, SEXP env)
